@@ -1,2 +1,3 @@
 Remove deprecated LAR class in 1.10 version
 Remove deprecated WeightedExperiment::getWeight
+Remove DistributionFactory::build(NumericalSample, CovarianceMatrix&)
